--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: My Awesome Site
 description: A subdomain takeover demo
-theme: minima  # You can change this to other supported themes
+theme: jekyll-theme-hacker
+
